# rtcmake_init

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflow/: build.yml
.github/workflows/: build.yml  release.yml
cmake/: CompilerWarnings.cmake  InterproceduralOptimization.cmake  SourcesAndHeaders.cmake  StaticAnalyzer.cmake
include/: rtcmake_init.h  rtcmake_prompt.h  rtcmake_util.h  version.h
src/: rtcmake_create.c  rtcmake_init.c  rtcmake_util.c
src/files/: file_cmakelists.c  file_cmakepresets.c
src/prompt/: rtcmake_prompt.c  rtcmake_prompt_question.c  rtcmake_prompt_selection.c  rtcmake_prompt_yesno.c
